packages/typ/tests/fixtures/diagnostics/0812_polyvar_call_wrong_tag_06.ml.infer.expected
File "0812_polyvar_call_wrong_tag_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0812_polyvar_call_wrong_tag_06 is not a valid module name.

File "0812_polyvar_call_wrong_tag_06.ml", line 5, characters 18-20:
5 | let _ = read_zeta `C
                      ^^
Error: The constructor `C has type [> `C ]
       but an expression was expected of type [ `A | `B ]
       The second variant type does not allow tag(s) `C
